Add function for displaying books onto DOM and styling for background

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <h1 class="Title">My Library</h1>
+            <button type="button" class="add-book">Add Book</button>
+        </header>
+        <div class="books"></div>
+    </div>
 </body>
 </html>
