Add delete and change read status buttons and their functionality
updated the submit new book functionality to reset the form and close form
upon submission

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
                     <input type="text" id="pages-input" name="pages-input">
                 </div>
 
-                <input type="checkbox" id="read-input" value="read">
-                <label for="read-input">Finished reading?</label>
+                <div>
+                    <input type="checkbox" id="read-input">
+                    <label for="read-input">Finished reading?</label>
+                </div>  
                 <button class="modal-btn" id="submit-modal" type="submit">Add Book</button>
                 <button class="modal-btn" id="close-modal" type="button">Cancel</button>
             </form>
