Add css style for the individual book cards

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header>
-            <h1 class="title">My Library</h1>
+            <h1 class="heading">My Library</h1>
             <button type="button" id="new-book">New Book</button>
         </header>
         <dialog id="add-book-modal">
